[tool.poetry]
name = "oras-www"
version = "0.1.0"
description = "Source for ORAS website"
authors = ["The ORAS Authors"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
