[tool.poetry]
name = "oras-www"
version = "0.1.0"
description = "Source for ORAS website"
authors = ["The ORAS Authors"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.7"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
